@@ -1,3 +1,8 @@
+2020-03-04  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* src/pkl-ast.c (pkl_ast_type_defval): ASTREF the type of the
+	index of new array elements.
+
 2020-03-03  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* src/pkl-trans.c (pkl_trans3_ps_scons): New handler.
